--- a/fagkveld/src/MainContainer/styles/MainContainer.css
+++ b/fagkveld/src/MainContainer/styles/MainContainer.css
@@ -12,6 +12,29 @@
   padding-right: 20%;
 }
 
+@media (max-width: 978px) {
+  .main-container {
+    padding: 5%;
+  }
+}
+
+/* @media (max-width: 978px) {
+  .container {
+    padding:0;
+    margin:0;
+  }
+
+  body {
+    padding:0;
+  }
+
+  .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom:0;
+  }
+} */
+
 .button-container {
   width:100%;
 }
